Add password session auth
